--- a/app/assets/stylesheets/components/_deco.scss
+++ b/app/assets/stylesheets/components/_deco.scss
@@ -9,3 +9,12 @@
   top: 80px;
   left: 40px;
 }
+
+.croix_grise {
+    position: relative;
+    height: 100px;
+    width: 100px;
+    left: 607px;
+    opacity: 0.6;
+    bottom: 53px;
+}
