--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -25,3 +25,16 @@
   background-size: cover;
   padding: 0px !important;
 }
+
+#pchican {
+  font-style: italic;
+  width: 100%;
+  text-align: right;
+  padding-top: 20px;
+}
+
+.home5 {
+  background-image: url("./sunset.jpg");
+  background-size: cover;
+  padding: 0px !important;
+}
