--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,19 +42,20 @@
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
   <section id="section1" class="cd-section home1">
-    <div class="section">
-    <h1>Ōma Cinema concept</h1>
-    <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+    <div class="container">
+      <div class="row">
+        <h1>Ōma Cinema concept</h1>
+        <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+      </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section2" class="cd-section">
     <div class="container">
       <div class="row">
-        <i class="fas fa-quote-left"></i>
+        <i class="fas fa-quote-left fa-7x"></i>
         <h2>Whereas all the cinemas built for more than 50 years now are similar and reproduce the same seating arrangement of the spectators, this concept of movie theater creates a cinematographic experience at the same time intimate, spectacular and immersive, making Ōma unique in the global cinematographic landscape.</h2>
-        <i class="fas fa-quote-right"></i>
-        <h3>Pierre Chican, CEO</h3>
+        <h4 id="pchican">Pierre Chican, CEO</h4>
       </div>
     </div>
   </section><!-- cd-section -->
@@ -63,6 +64,7 @@
     <div class="unforget">
       <h1>AN UNFORGETTABLE EXPERIENCE</h1>
       <p>Much more than just the spectacular nature of the architecture, the original configuration of the room has been designed to offer viewers an exceptional audio and visual experience, projecting an image free of any distortion. Ōma is an experience that you will never forget.</p>
+      <img src="../assets/croix_grise.png" alt="croix" class="croix_grise">
     </div>
   </section><!-- cd-section -->
 
@@ -70,42 +72,13 @@
     <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
   </section><!-- cd-section -->
 
-  <section id="section5" class="cd-section">
-    <div class="barre-blue">
-      <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
-    </div>
+  <section id="section5" class="cd-section home5">
+      <div class="sunset">
+        <h1>AN SPECTACULAR CINEMA THEATER</h1>
+        <p>The innovative character of the Ōma cinema is based on a new type of architecture that overturns the relation between the viewer and the image by completely changing the way the seats are placed in front of the screen.</p>
+      </div>
   </section><!-- cd-section -->
 
-  <section id="cd-team" class="cd-section">
-      <div class="cd-container">
-        <h2>Our team</h2>
-        <ul>
-          <li>
-            <a href="#0" data-type="member-1">
-              <figure>
-                <img src="img/team-member-1.jpg" alt="Team member 1">
-                <div class="cd-img-overlay"><span>View Bio</span></div>
-              </figure>
-
-              <div class="cd-member-info">
-                John Smith <span>CEO</span>
-              </div> <!-- cd-member-info -->
-            </a>
-          </li>
-
-          <li>
-            <a href="#0" data-type="member-2">
-              <figure>
-                <img src="img/team-member-1.jpg" alt="Team member 1">
-                <div class="cd-img-overlay"><span>View Bio</span></div>
-              </figure>
-
-              <div class="cd-member-info">
-                Cristina Cameron <span>Marketing</span>
-              </div> <!-- cd-member-info -->
-            </a>
-          </li>
-        </ul>
-      </div> <!-- cd-container -->
-    </section>
-    <div class="cd-overlay"></div><!-- cd-team --><!-- cd-section -->
+  <section id="section6" class="cd-section">
+    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+  </section><!-- cd-section -->
