--- a/app/assets/stylesheets/components/_sections.scss
+++ b/app/assets/stylesheets/components/_sections.scss
@@ -23,5 +23,31 @@
   width: 40vw;
   h1 {
     padding-bottom: 30px;
+    font-weight: bold;
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1.6rem;
+  }
+}
+
+.sunset {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20%;
+  padding-left: 100px;
+  position: relative;
+  left: 60vw;
+  width: 40vw;
+  color: white;
+  text-align: right;
+  padding-right: 100px;
+  h1 {
+    padding-bottom: 30px;
+    font-weight: bold;
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1.6rem;
   }
 }
