--- a/app/assets/stylesheets/components/_cinema.scss
+++ b/app/assets/stylesheets/components/_cinema.scss
@@ -29,5 +29,14 @@
   text-align: center;
   display: flex;
   align-items: center;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
+@media (min-width: 1200px) {
+.container { max-width: 100% }
+}
+
+.row {
+  width: 100%;
+}
