--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,42 +43,77 @@
 
   <section id="section1" class="cd-section home1">
     <div class="container">
-      <div class="row">
-        <h1>Ōma Cinema concept</h1>
-        <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+      <div class="row justify-content-center">
+        <div class="col-12">
+          <h1>Ōma Cinema concept</h1>
+          <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+          </div>
       </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section2" class="cd-section">
     <div class="container">
-      <div class="row">
-        <i class="fas fa-quote-left fa-7x"></i>
-        <h2>Whereas all the cinemas built for more than 50 years now are similar and reproduce the same seating arrangement of the spectators, this concept of movie theater creates a cinematographic experience at the same time intimate, spectacular and immersive, making Ōma unique in the global cinematographic landscape.</h2>
-        <h4 id="pchican">Pierre Chican, CEO</h4>
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-6">
+          <i class="fas fa-quote-left fa-7x"></i>
+          <h2>Whereas all the cinemas built for more than 50 years now are similar and reproduce the same seating arrangement of the spectators, this concept of movie theater creates a cinematographic experience at the same time intimate, spectacular and immersive, making Ōma unique in the global cinematographic landscape.</h2>
+          <h4 id="pchican">Pierre Chican, CEO</h4>
+        </div>
       </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section3" class="cd-section home4">
-    <div class="unforget">
-      <h1>AN UNFORGETTABLE EXPERIENCE</h1>
-      <p>Much more than just the spectacular nature of the architecture, the original configuration of the room has been designed to offer viewers an exceptional audio and visual experience, projecting an image free of any distortion. Ōma is an experience that you will never forget.</p>
-      <img src="../assets/croix_grise.png" alt="croix" class="croix_grise">
+    <div class="container">
+      <div class="row d-flex align-items-center">
+        <div class="unforget col-12 col-lg-6">
+          <h1>AN UNFORGETTABLE EXPERIENCE</h1>
+          <p>Much more than just the spectacular nature of the architecture, the original configuration of the room has been designed to offer viewers an exceptional audio and visual experience, projecting an image free of any distortion. Ōma is an experience that you will never forget.</p>
+          <img src="../assets/croix_grise.png" alt="croix" class="croix_grise">
+        </div>
+      </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section4" class="cd-section">
-    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12">
+          <img src="../assets/logo_pathe.png" alt="pathe" class="pathe">
+        </div>
+      </div>
+    </div>
   </section><!-- cd-section -->
 
   <section id="section5" class="cd-section home5">
-      <div class="sunset">
-        <h1>AN SPECTACULAR CINEMA THEATER</h1>
-        <p>The innovative character of the Ōma cinema is based on a new type of architecture that overturns the relation between the viewer and the image by completely changing the way the seats are placed in front of the screen.</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+        </div>
+        <div class="sunset col-12 col-lg-6">
+          <h1>AN SPECTACULAR CINEMA THEATER</h1>
+          <p>The innovative character of the Ōma cinema is based on a new type of architecture that overturns the relation between the viewer and the image by completely changing the way the seats are placed in front of the screen.</p>
+        </div>
       </div>
+    </div>
   </section><!-- cd-section -->
 
   <section id="section6" class="cd-section">
-    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto numquam, totam iusto officia earum perferendis, culpa ad atque eveniet praesentium nobis expedita similique beatae tenetur. Distinctio vel tenetur, id cum.&rdquo;</p>
+    <div class="container">
+        <img src="../assets/croix_noire.png" alt="croix" class="croix_noire">
+      <div class="row">
+        <div class="col-12 col-lg-6 p-4">
+          <h1>Pierre Chican, Architect</h1>
+          <p>Specialized in the realization of cultural arenas and more particularly of cinemas for more than 20 years now, Pierre Chican designed two of the most successful cinema theaters in France : UGC Les Halles (4.5 million tickets sold in 2016) & UGC Bercy (3 million tickets sold in 2016) in Paris and many others projects in France (Pathé La Valette with the first IMAX laser cinema in France) and abroad.</p>
+          <img src="../assets/grand_carre.png" alt="croix" class="grand_carre">
+        </div>
+        <div class="col-12 col-lg-6 p-4">
+        <img src="../assets/croix_grise.png" alt="croix" class="croix_grise_team">
+          <h1>Nicolas Chican, Business Partner</h1>
+          <p>Nicolas Chican has a Master in Science of Management at EM LYON Business School. He majored in Services Marketing and developed strong skills in the entertainment and tourism industry. During his studies, Nicolas worked on a revenue management oriented solution for cinema tickets.</p>
+          <img src="../assets/carre_gris.png" alt="croix" class="carre_gris">
+        </div>
+      </div>
+    </div>
   </section><!-- cd-section -->
