--- a/app/assets/stylesheets/components/_deco.scss
+++ b/app/assets/stylesheets/components/_deco.scss
@@ -14,7 +14,39 @@
     position: relative;
     height: 100px;
     width: 100px;
-    left: 607px;
+    z-index: 3;
+    left: 56%;
     opacity: 0.6;
-    bottom: 53px;
+}
+
+.croix_noire {
+  position: relative;
+  height: 100px;
+  left: 40%;
+  bottom: 250px;
+}
+
+.grand_carre {
+  position: relative;
+  z-index: 3;
+  width: 500px;
+  left: -20%;
+  bottom: 321px;
+  opacity: 0.5;
+}
+
+.carre_gris {
+  z-index: 3;
+  height: 300px;
+  position: relative;
+  bottom: 200px;
+  left: 30%;
+}
+
+.croix_grise_team {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  top: -100px;
+  left: -10%;
 }
