--- a/app/assets/stylesheets/components/_cinema.scss
+++ b/app/assets/stylesheets/components/_cinema.scss
@@ -29,8 +29,8 @@
   text-align: center;
   display: flex;
   align-items: center;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 @media (min-width: 1200px) {
