--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -192,6 +192,10 @@ color:#fff;
 border:0px;
 }
 
+.footer-100 {
+  width: 100%;
+}
+
 .border-footer {
   border-top: 1px solid rgba(255, 255, 255, 0.4);
 }
