--- a/app/assets/stylesheets/components/_oma.scss
+++ b/app/assets/stylesheets/components/_oma.scss
@@ -18,8 +18,6 @@
 .fond-foyer {
   background-color: $blue;
   height: 100vh;
-  width: 45%;
-  left: 55%;
   position: relative;
   margin-right: 0px;
   opacity: 0.8;
@@ -34,9 +32,9 @@
 }
 
 .foyer-text {
-  padding-left: 100px;
+  padding-left: 10%;
   padding-top: 200px;
-  padding-right: 0px;
+  padding-right: 10%;
   text-align: left;
   ul {
     padding-left: 0px;
