--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -101,14 +101,14 @@
 
   <section id="section6" class="cd-section">
     <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-6 p-5">
         <img src="../assets/croix_noire.png" alt="croix" class="croix_noire">
-      <div class="row">
-        <div class="col-12 col-lg-6 p-4">
           <h1>Pierre Chican, Architect</h1>
           <p>Specialized in the realization of cultural arenas and more particularly of cinemas for more than 20 years now, Pierre Chican designed two of the most successful cinema theaters in France : UGC Les Halles (4.5 million tickets sold in 2016) & UGC Bercy (3 million tickets sold in 2016) in Paris and many others projects in France (Pathé La Valette with the first IMAX laser cinema in France) and abroad.</p>
           <img src="../assets/grand_carre.png" alt="croix" class="grand_carre">
         </div>
-        <div class="col-12 col-lg-6 p-4">
+        <div class="col-12 col-lg-6 p-5">
         <img src="../assets/croix_grise.png" alt="croix" class="croix_grise_team">
           <h1>Nicolas Chican, Business Partner</h1>
           <p>Nicolas Chican has a Master in Science of Management at EM LYON Business School. He majored in Services Marketing and developed strong skills in the entertainment and tourism industry. During his studies, Nicolas worked on a revenue management oriented solution for cinema tickets.</p>
