--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -42,55 +42,62 @@
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
   <section id="section1" class="cd-section home1">
-    <div class="section">
-    <h1>What is Ōma</h1>
-    <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+    <div class="container justify-content-center">
+      <div class="row justify-content-center">
+        <h1>What is Ōma</h1>
+        <a href="#section2" class="cd-scroll-down cd-img-replace"><i class="fas fa-chevron-down fa-3x"></i></a>
+      </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section2" class="cd-section">
-    <div class="section">
-    <div class="oma-container">
-      <h1>Ōma, the next cinema</h1>
-      <div class="block d-flex justify-content-between">
-        <div class="block-text">
-          <p>The innovative character of the Ōma cinema is based on a new type of architecture that can be summed up in three major transformations:</p>
-          <br>
+    <div class="container flex-column justify-content-center">
+      <div class="row flex-column pb-5">
+        <h1 class="pb-4">Ōma, the next cinema</h1>
+        <p>The innovative character of the Ōma cinema is based on a new type of architecture that can be summed up in three major transformations:</p>
+      </div>
+      <div class="row d-flex justify-content-center pt-5">
+        <div class="col-12 col-lg-4">
+          <i class="fas fa-bullhorn fa-3x pb-5"></i>
           <h3>Distribution of the seats</h3>
-          <br>
           <p>The spectators are seated on several circular hanging platforms fixed on a sloping metal framework.</p>
+        </div>
+        <div class="col-12 col-lg-4">
+          <i class="fas fa-comments fa-3x pb-5"></i>
           <h3>Original layout</h3>
-          <br>
           <p>As in theater, each platform forms a box with a few rows of seats accessible by two aisles.</p>
+        </div>
+        <div class="col-12 col-lg-4">
+          <i class="fas fa-house-damage fa-3x pb-5"></i>
           <h3>Positioning of the projector booth</h3>
-          <br>
           <p>Ōma architecture integrates the projector in the structure at the back of the platforms, facing the center of the screen in both directions.</p>
         </div>
-        <div class="image-block">
-        </div>
       </div>
-    </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section3" class="cd-section home2">
-    <div class="fond-foyer d-flex">
-      <img src="../assets/etoile.png" alt="etoile" class="etoile">
-      <div class="foyer-text">
-        <h2 class="pb-4">Customization</h2>
-        <div class="tiret"></div>
-          <p class="pt-4">The original configuration of this room also gives you the possibility to offer personalized services:</p>
-          <ul>
-            <div class="d-flex">
-            <li class="pb-3"><p class="my-auto"><i class="fas fa-home fa-2x"></i>Privatization of entire boxes</p></li>
-            </div>
-            <div>
-            <li class="pb-3"><p><i class="fas fa-user-friends fa-2x"></i>Advance booking of seats</p></li>
-            </div>
-            <div>
-            <li class="pb-3"><p><i class="fas fa-glass-martini fa-2x"></i>VIP tickets with exclusive access to lounge or bar</p></li>
-            </div>
-          </ul>
+    <div class="container">
+      <div class="row flex-row-reverse">
+        <div class="fond-foyer d-flex col-12 col-lg-5">
+          <img src="../assets/etoile.png" alt="etoile" class="etoile">
+          <div class="foyer-text">
+            <h2 class="pb-4">Customization</h2>
+            <div class="tiret"></div>
+              <p class="pt-4">The original configuration of this room also gives you the possibility to offer personalized services:</p>
+              <ul>
+                <div class="d-flex">
+                <li class="pb-3"><p class="my-auto"><i class="fas fa-home fa-2x"></i>Privatization of entire boxes</p></li>
+                </div>
+                <div>
+                <li class="pb-3"><p><i class="fas fa-user-friends fa-2x"></i>Advance booking of seats</p></li>
+                </div>
+                <div>
+                <li class="pb-3"><p><i class="fas fa-glass-martini fa-2x"></i>VIP tickets with exclusive access to lounge or bar</p></li>
+                </div>
+              </ul>
+          </div>
+        </div>
       </div>
     </div>
   </section><!-- cd-section -->
