--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
 <div class="footer">
             <div class="container">
+              <div class="footer-100">
                 <div class="row">
                     <div class="col-lg-4 col-sm-4 col-xs-12">
                         <div class="single_footer">
@@ -52,5 +53,6 @@
                         <p class="copyright">Copyright © 2019 <a href="#">Ōma</a>.</p>
                     </div><!--- END COL -->
                 </div><!--- END ROW -->
+              </div>
             </div><!--- END CONTAINER -->
   </div>
