--- a/app/assets/stylesheets/components/_deco.scss
+++ b/app/assets/stylesheets/components/_deco.scss
@@ -23,14 +23,13 @@
   position: relative;
   height: 100px;
   left: 40%;
-  bottom: 250px;
 }
 
 .grand_carre {
   position: relative;
   z-index: 3;
   width: 500px;
-  left: -20%;
+  left: -25%;
   bottom: 321px;
   opacity: 0.5;
 }
@@ -41,6 +40,7 @@
   position: relative;
   bottom: 200px;
   left: 30%;
+  opacity: 0.7;
 }
 
 .croix_grise_team {
