--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -18,23 +18,27 @@
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
   <section id="section1" class="cd-section home-contact">
-    <div class="section">
-      <h1 class="pb-5">Contact</h1>
-      <br>
-      <br>
-      <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
-      <div class="d-flex justify-content-between mx-5 px-5">
-      <div class="contact-info">
-        <img src="../assets/logo.png" alt="logo">
-        <h3>38, rue de Trévise</h3>
-        <h3>75009 Paris</h3>
-        <h3>France</h3>
-        <h4>+33 1 42 00 11 24</h4>
-        <h4>nchican@omacinema.com</h4>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="section">
+          <h1 class="pb-5 lg-12">Contact</h1>
+          <br>
+          <br>
+          <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+          <div class="d-flex justify-content-between mx-5 px-5">
+          <div class="contact-info">
+            <img src="../assets/logo.png" alt="logo">
+            <h3>38, rue de Trévise</h3>
+            <h3>75009 Paris</h3>
+            <h3>France</h3>
+            <h4>+33 1 42 00 11 24</h4>
+            <h4>nchican@omacinema.com</h4>
+          </div>
+          <div id="map1" style="width: 500px; height: 300px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+          </div>
+          </div>
       </div>
-      <div id="map1" style="width: 500px; height: 300px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-      </div>
-      </div>
+    </div>
     </div>
   </section><!-- cd-section -->
 
