--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -79,23 +79,27 @@
   <section id="section3" class="cd-section home2">
     <div class="container">
       <div class="row flex-row-reverse">
-        <div class="fond-foyer d-flex col-12 col-lg-5">
+        <div class="fond-foyer d-flex col-12 col-lg-6">
           <img src="../assets/etoile.png" alt="etoile" class="etoile">
-          <div class="foyer-text">
-            <h2 class="pb-4">Customization</h2>
-            <div class="tiret"></div>
-              <p class="pt-4">The original configuration of this room also gives you the possibility to offer personalized services:</p>
-              <ul>
-                <div class="d-flex">
-                <li class="pb-3"><p class="my-auto"><i class="fas fa-home fa-2x"></i>Privatization of entire boxes</p></li>
-                </div>
-                <div>
-                <li class="pb-3"><p><i class="fas fa-user-friends fa-2x"></i>Advance booking of seats</p></li>
-                </div>
-                <div>
-                <li class="pb-3"><p><i class="fas fa-glass-martini fa-2x"></i>VIP tickets with exclusive access to lounge or bar</p></li>
-                </div>
-              </ul>
+          <div class="container flex-column justify-content-center">
+            <div class="row">
+              <div class="foyer-text">
+                <h2 class="pb-4">Customization</h2>
+                <div class="tiret"></div>
+                  <p class="pt-4">The original configuration of this room also gives you the possibility to offer personalized services:</p>
+                  <ul>
+                    <div class="d-flex">
+                      <li class="pb-3 pt-4"><p class="my-auto"><i class="fas fa-home fa-2x"></i>Privatization of entire boxes</p></li>
+                    </div>
+                    <div>
+                      <li class="pb-3"><p><i class="fas fa-user-friends fa-2x"></i>Advance booking of seats</p></li>
+                    </div>
+                    <div>
+                      <li class="pb-3"><p><i class="fas fa-glass-martini fa-2x"></i>VIP tickets with exclusive access to lounge or bar</p></li>
+                    </div>
+                  </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -107,6 +111,19 @@
   </section><!-- cd-section -->
 
   <section id="section5" class="cd-section home3">
+    <div class="container m-0 flex-column p-0">
+      <div class="row">
+        <div class="petit-carre-bleu col-12 col-lg-3">
+
+        </div>
+      <img src="../assets/grand_carre.png" alt="carre" class="grand_carre_star_wars">
+      </div>
+      <div class="row flex-row-reverse">
+        <div class="grand-carre-bleu col-12 col-lg-4">
+
+        </div>
+      </div>
+    </div>
 
   </section><!-- cd-section -->
 
