--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -18,32 +18,29 @@
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
   <section id="section1" class="cd-section home-contact">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="section">
-          <h1 class="pb-5 lg-12">Contact</h1>
-          <br>
-          <br>
-          <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
-          <div class="d-flex justify-content-between mx-5 px-5">
-          <div class="contact-info">
-            <img src="../assets/logo.png" alt="logo">
-            <h3>38, rue de Trévise</h3>
-            <h3>75009 Paris</h3>
-            <h3>France</h3>
-            <h4>+33 1 42 00 11 24</h4>
-            <h4>nchican@omacinema.com</h4>
-          </div>
-          <div id="map1" style="width: 500px; height: 300px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-          </div>
-          </div>
+    <div class="container flex-column justify-content-center">
+      <div class="row justify-content-center pb-5">
+        <h1 class="lg-12">Contact</h1>
+        <br>
+        <br>
+        <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
       </div>
-    </div>
+      <div class=" row d-flex justify-content-between mx-5 px-5 my-5">
+        <div class="contact-info col-12 col-lg-6 text-left">
+          <img src="../assets/logo.png" alt="logo">
+          <h3>38, rue de Trévise</h3>
+          <h3>75009 Paris</h3>
+          <h3>France</h3>
+          <h4>+33 1 42 00 11 24</h4>
+          <h4 class="pb-5">nchican@omacinema.com</h4>
+        </div>
+        <div id="map1" class="col-12 col-lg-6"  style="width: 500px; height: 300px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
+      </div>
     </div>
   </section><!-- cd-section -->
 
   <section id="section2" class="cd-section">
-    <div class="section">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-sm-offset-3">
@@ -52,11 +49,11 @@
               <%= simple_form_for(@message, url: create_message_url) do |f| %>
               <%= notice %>
               <%= @message.errors.full_messages.join(', ') %>
-              <div class="row">
-                <div class="col-xs-6 col-sm-6">
+              <div class="row ml-0 pt-5">
+                <div class="col-xs-6 col-sm-6 pl-0">
                   <%= f.input :name, placeholder: "name" %>
                 </div>
-                <div class="col-xs-6 col-sm-6">
+                <div class="col-xs-6 col-sm-6 pr-0">
                   <%= f.input :email, placeholder: 'email' %>
                 </div>
               </div>
@@ -67,5 +64,4 @@
         </div>
         </div>
       </div>
-    </div>
   </section><!-- cd-section -->
