--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -113,14 +113,15 @@
   <section id="section5" class="cd-section home3">
     <div class="container m-0 flex-column p-0">
       <div class="row">
-        <div class="petit-carre-bleu col-12 col-lg-3">
-
+        <div class="pl-5 petit-carre-bleu col-12 col-lg-3 d-flex flex-column text-left">
+          <h1 class="pt-5">An optimized projection system</h1>
+          <div class="tiret pt-3"></div>
         </div>
       <img src="../assets/grand_carre.png" alt="carre" class="grand_carre_star_wars">
       </div>
       <div class="row flex-row-reverse">
-        <div class="grand-carre-bleu col-12 col-lg-4">
-
+        <div class="grand-carre-bleu col-12 col-lg-4 d-flex align-items-center">
+          <p>The staggered arrangement of the platforms allow for the central positioning of the projector, thus projecting in the best possible way, an image free of any distortion.</p>
         </div>
       </div>
     </div>
@@ -128,6 +129,53 @@
   </section><!-- cd-section -->
 
   <section id="section6" class="cd-section">
-
+    <div class="container flex-column justify-content-center">
+      <div class="row flex-column pb-5">
+        <h1 class="pb-4">Comfort</h1>
+        <p>You can set up your cinema depending on the degree of comfort you are looking for</p>
+      </div>
+      <div class="row d-flex justify-content-center pt-5">
+        <div class="col-12 col-md-6 col-lg-3">
+          <img src="../assets/loge1_site.png" alt="croix" class="loge">
+          <div class="loge-description text-left">
+            <h3>Exclusive</h3>
+            <div class="tiret"></div>
+            <p>Box with comfortable leather sofas</p>
+            <div class="tiret"></div>
+            <p>2 rows of 2 seats</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <img src="../assets/loge1_site.png" alt="croix" class="loge">
+          <div class="loge-description text-left">
+            <h3>Familly</h3>
+            <div class="tiret"></div>
+            <p>Box with Club armchairs</p>
+            <div class="tiret"></div>
+            <p>3 rows of 2,2 and 1 seat</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <img src="../assets/loge1_site.png" alt="croix" class="loge">
+          <div class="loge-description text-left">
+            <h3>Comfort</h3>
+            <div class="tiret"></div>
+            <p>Box with Club armchairs</p>
+            <div class="tiret"></div>
+            <p>3 rows of 5, 6 and 4 seats</p>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <img src="../assets/loge1_site.png" alt="croix" class="loge">
+          <div class="loge-description text-left">
+            <h3>VIP</h3>
+            <div class="tiret"></div>
+            <p>Box with recliner leather sofas</p>
+            <div class="tiret"></div>
+            <p>2 rows of 3 and 2 seats</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section><!-- cd-section -->
 
