--- a/app/assets/stylesheets/components/_deco.scss
+++ b/app/assets/stylesheets/components/_deco.scss
@@ -6,7 +6,7 @@
 .etoile {
   position: absolute;
   height: 100px;
-  top: 80px;
+  top: 50px;
   left: 40px;
 }
 
@@ -54,6 +54,7 @@
 .petit-carre-bleu {
   height: 30vh;
   background-color: $blue;
+  box-shadow: 2px 2px 10px white;
 }
 
 .grand-carre-bleu {
