--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -24,130 +24,100 @@
         <span class="cd-label">Press Release</span>
       </a>
     </li>
-    <li>
-      <a href="#section4" data-number="4">
-        <span class="cd-dot"></span>
-        <span class="cd-label">Kit Press</span>
-      </a>
-    </li>
   </ul>
 </nav>
 <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
-<section id="section1" class="cd-section">
-  <div class="section">
-  <h1>Press</h1>
-  <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
-  </div>
-</section><!-- cd-section -->
-
-<section id="section2" class="cd-section">
-  <div class="section">
-    <h1 class="pb-5">Press Articles</h1>
-    <% array = [] %>
-    <% arr = [] %>
-    <% @articles.each do |article| %>
-      <% article.tag_list.each do |tage| %>
-        <% array << tage %>
-       <% end %>
-    <% end %>
-    <% array.uniq.each do |tag| %>
-      <h3 class="pb-5"><%= link_to tag, articles_path(tag: tag) %></h3>
-    <% end %>
-      <div class="carousel-wrapper">
-       <div class="carousel" data-flickity>
-        <% @articles.each do |article| %>
-        <div class="carousel-cell">
-          <h1><%= link_to article.title, article_path(article) %></h1>
-            <p><%= article.content %>
-            <br>
-            <br>
-            <% article.tag_list.each do |tag| %>
-              <%= link_to tag, articles_path(tag: tag) %>
-              <% end %>
-            </p>
-            <a class="more" href="">Explore more</a>
-          </div>
-          <% end %>
-        <h2><% if params[:tag].present? %></h2>
-        <h2><%=link_to 'Go Back', articles_path %></h2>
-       </div>
-      </div>
-    <% end %>
-  </div>
-</section>
 <!-- cd-section -->
 
-<section id="section3" class="cd-section">
-  <div class="section">
-    <h1 class="pb-5">Press Releases</h1>
+<section id="section1" class="cd-section">
+  <div class="container flex-column justify-content-center">
+    <div class="row flex-column">
+      <h1 class="pb-5">Press Articles</h1>
+    </div>
 
-  <!--Carousel Wrapper-->
-<div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
-  <!--Controls-->
-  <div class="controls-top pb-5">
-    <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
-    <a class="btn-floating" href="#multi-item-example" data-slide="next"><i
-        class="fas fa-chevron-right"></i></a>
-  </div>
-  <div class="carousel-inner" role="listbox">
-    <!--First slide-->
-    <div class="carousel-item active d-flex">
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <div class="card-body">
-            <h4 class="card-title">Press Release 2018</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary">See more</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <div class="card-body">
-            <h4 class="card-title">Press Release 2019</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary">See more</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mb-2">
-          <div class="card-body">
-            <h4 class="card-title">Press release 2020</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-              card's content.</p>
-            <a class="btn btn-primary">See more</a>
-          </div>
+    <div class="row d-flex justify-content-center align-items-center mt-5" style=" height: 28%">
+      <div class="carousel-wrapper col-12">
+        <div class="carousel" data-flickity>
+          <% @articles.each do |article| %>
+            <div class="carousel-cell">
+              <a href="articles">
+              <%= cl_image_tag article.photo %></a>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
   </div>
-  <ol class="carousel-indicators pt-5">
-    <li data-target="#multi-item-example" data-slide-to="0" class="active"></li>
-    <li data-target="#multi-item-example" data-slide-to="1"></li>
-    <li data-target="#multi-item-example" data-slide-to="2"></li>
-  </ol>
-  <!--/.Slides-->
-</div>
+</section>
+<!-- cd-section -->
+
+<section id="section2" class="cd-section section2-articles">
+  <div class="container flex-column justify-content-center">
+    <div class="row flex-column pb-5 mb-5">
+      <h1 style="color: #191E55">Press Releases</h1>
+    </div>
+    <div class="row flex-column">
+      <div class="cards">
+        <div class="card d-flex justify-content-between align-items-center">
+          <h4 class="card-title mt-5">Press Release 2018</h4>
+          <a class="btn btn-primary m-5">See more</a>
+        </div>
+
+        <div class="card d-flex justify-content-between align-items-center">
+          <h4 class="card-title mt-5">Press Release 2018</h4>
+          <a class="btn btn-primary m-5">See more</a>
+        </div>
+
+        <div class="card d-flex justify-content-between align-items-center">
+          <h4 class="card-title mt-5">Press Release 2018</h4>
+          <a class="btn btn-primary m-5">See more</a>
+        </div>
+
+
+      <div class="card d-flex justify-content-between align-items-center">
+          <h4 class="card-title mt-5">Press Release 2018</h4>
+          <a class="btn btn-primary m-5">See more</a>
+        </div>
+
+
+      <div class="card d-flex justify-content-between align-items-center">
+          <h4 class="card-title mt-5">Press Release 2018</h4>
+          <a class="btn btn-primary m-5">See more</a>
+        </div>
+
+
+      <div class="card d-flex justify-content-between align-items-center">
+          <h4 class="card-title mt-5">Press Release 2018</h4>
+          <a class="btn btn-primary m-5">See more</a>
+        </div>
+
+      <div class="card d-flex justify-content-between align-items-center">
+          <h4 class="card-title mt-5">Press Release 2018</h4>
+          <a class="btn btn-primary m-5">See more</a>
+        </div>
+
+      <div class="card d-flex justify-content-between align-items-center">
+          <h4 class="card-title mt-5">Press Release 2018</h4>
+          <a class="btn btn-primary m-5">See more</a>
+        </div>
+      </div>
+
+    </div>
   </div>
-<!--/.Carousel Wrapper-->
 </section><!-- cd-section -->
 
-<section id="section4" class="cd-section">
-  <div class="section">
-    <h1 class="pb-5">Press Info</h1>
-    <h2>Contact</h2>
-    <h3>Nicolas Chican</h3>
-    <h5>nchican@omacinema.com</h5>
-    <br>
-    <br>
-    <a class="btn btn-primary">Press kit</a>
+<section id="section3" class="cd-section section3-articles">
+  <div class="container d-flex justify-content-center">
+    <div class="row d-flex flex-column">
+      <h1 class="pb-5">Press Info</h1>
+      <h2>Contact</h2>
+      <h3>Nicolas Chican</h3>
+      <h5>nchican@omacinema.com</h5>
+      <br>
+      <br>
+      <a class="btn btn-primary">Press kit</a>
+    </div>
   </div>
 </section><!-- cd-section -->
 <!-- cd-section -->
