--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,28 +1,13 @@
-.article-card {
-  background: #3E3946;                         /* White background */
-  padding: 30px;
-  margin-left: 15px;
-  margin-right: 15px;                           /* Internal space */
-  border-radius: 4px;                        /* Small radius */
-  box-shadow: 0 10px 30px rgba(0,0,0,.1);
-}
-
-.article-card:hover {
-  -ms-transform: scale(1.05); /* IE 9 */
-  -webkit-transform: scale(1.05); /* Safari 3-8 */
-  transform: scale(1.05);
-}
-
-.card-body {
-  background: #735260;                         /* White background */
-  padding: 30px;                             /* Internal space */
-  border-radius: 4px;                        /* Small radius */
-  box-shadow: 0 10px 30px rgba(0,0,0,.1);
-}
 
 .card {
-  background-color: #3E3946;
+  background-color: $blue;
+  opacity: 1;
   border:none;
+  width: 95%;
+  height: 250px;
+  .btn-primary {
+    width: 35%;
+  }
 }
 
 .card:hover {
@@ -31,7 +16,22 @@
   transform: scale(1.05);
 }
 
-.contact-card {
-  width: 100%;
-  display: flex;
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
+
+
+@media(max-width: 992px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media(max-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
 }
