--- a/app/assets/stylesheets/components/_sections.scss
+++ b/app/assets/stylesheets/components/_sections.scss
@@ -45,3 +45,15 @@
     font-size: 1.6rem;
   }
 }
+
+#section1 {
+  background-color: $blue;
+}
+
+.section2-articles {
+  background-color: white !important;
+}
+
+.section3-articles {
+  background-color: $blue !important;
+}
