--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,6 +2,8 @@
   <%= f.input :title %>
   <%= f.input :content %>
   <!-- Add tags as a comma separated list -->
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
   <%= f.input :tag_list, label: "Add tags", hint: "Add your tags, separated by commas" %>
   <!-- Add tags as checkboxes -->
   <%= f.submit %>
