--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,7 +55,7 @@
   <section id="section2" class="cd-section">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12 col-lg-6">
+        <div class="col-12">
           <i class="fas fa-quote-left fa-7x"></i>
           <h2>Whereas all the cinemas built for more than 50 years now are similar and reproduce the same seating arrangement of the spectators, this concept of movie theater creates a cinematographic experience at the same time intimate, spectacular and immersive, making Ōma unique in the global cinematographic landscape.</h2>
           <h4 id="pchican">Pierre Chican, CEO</h4>
