--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-4 col-xs-12">
                         <div class="single_footer">
-                            <h4>Services</h4>
+                            <h4>Ōma concept</h4>
                             <ul>
                                 <li><a href="#">Lorem Ipsum</a></li>
                                 <li><a href="#">Simply dummy text</a></li>
