--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -41,8 +41,8 @@
         <div class="carousel" data-flickity>
           <% @articles.each do |article| %>
             <div class="carousel-cell">
-              <a href="articles">
-              <%= cl_image_tag article.photo %></a>
+              <%= link_to cl_image_tag(article.source), article_path(article) %>
+
             </div>
           <% end %>
         </div>
@@ -50,6 +50,7 @@
     </div>
   </div>
 </section>
+
 <!-- cd-section -->
 
 <section id="section2" class="cd-section section2-articles">
